# diagrams

./: .readthedocs.yaml  DOCUMENTATION.md  GPU_ACCELERATION.md  README.md  pyproject.toml  requirements.txt  setup.py
docs/source/: api_reference.rst  backends.rst  conf.py  index.rst  refs.bib  roadmap.rst  theory.rst  usage.rst  yarrow.rst
tests/: strategies.py  test_bipartite_multigraph.py  test_decompose.py  test_diagram.py  test_finite_function.py  test_functor.py  test_indexed_coproduct.py  test_layering.py  test_optic.py  test_permutations.py  test_segmented.py  test_segmented_finite_function.py  test_strategies.py  test_vector.py  util.py
yarrow/: __init__.py  bipartite_multigraph.py  cupy.py  diagram.py  finite_function.py  segmented_finite_function.py
yarrow/array/: __init__.py  cupy.py  numpy.py
yarrow/decompose/: frobenius.py
yarrow/functor/: __init__.py  functor.py  optic.py
yarrow/numpy/: __init__.py  layer.py
yarrow/segmented/: __init__.py  finite_function.py  operations.py
