[project]
name = "yarrow-diagrams"
version = "0.0.3.1"
authors = [
  { name="Paul Wilson", email="paul@statusfailed.com" }
]
description = "yarrow diagrams"
readme = "README.md"
requires-python = ">= 3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]
dependencies = [
  "numpy~=1.23.3",
  "scipy~=1.10.0",
]

[project.urls]
"Homepage" = "https://yarrow.id"
"Github" = "https://github.com/yarrow-id/diagrams/"
"Documentation" = "https://yarrow-diagrams.readthedocs.io/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["yarrow"]

[tool.pytest.ini_options]
testpaths = [
  "tests"
]
